# The top-level input Makefile for mpq-tools

# minimum required automake 1.6
AUTOMAKE_OPTIONS = 1.6

# Any directories which should be built and installed.
SUBDIRS = db libmpq src

# The directories which are part of the distribution.
DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST =		\
	AUTHORS		\
	COPYING		\
	ChangeLog	\
	NEWS		\
	README		\
	THANKS		\
	TODO
