# minimum required automake 1.6
AUTOMAKE_OPTIONS		= 1.6

# the main programs.
bin_PROGRAMS			= mpq-extract mpq-info

# sources for mpq-extract program.
mpq_extract_SOURCES		= mpq-extract.c
mpq_extract_LDADD		= ../libmpq/libmpq.la
mpq_extract_DEPENDENCIES	= ../libmpq/libmpq.la

# sources for mpq-info program.
mpq_info_SOURCES		= mpq-info.c
mpq_info_LDADD			= ../libmpq/libmpq.la
mpq_info_DEPENDENCIES		= ../libmpq/libmpq.la
