# minimum required automake 1.6
AUTOMAKE_OPTIONS		= 1.6

# manual page directory.
EXTRA_DIST			= $(man_MANS)

# manual pages for the installed binaries.
man_MANS =				\
	libmpq.3			\
	libmpq__archive_close.3		\
	libmpq__archive_info.3		\
	libmpq__archive_open.3		\
	libmpq__block_copy.3		\
	libmpq__block_decompress.3	\
	libmpq__block_decrypt.3		\
	libmpq__block_explode.3		\
	libmpq__block_info.3		\
	libmpq__file_close.3		\
	libmpq__file_info.3		\
	libmpq__file_name.3		\
	libmpq__file_number.3		\
	libmpq__file_open.3		\
	libmpq__memory_copy.3		\
	libmpq__memory_decompress.3	\
	libmpq__memory_decrypt.3	\
	libmpq__memory_explode.3	\
	libmpq__version.3
